Minor styling adjustments. Added icon for compact sidebar subreddits navlink.

--- a/src/index.scss
+++ b/src/index.scss
@@ -32,6 +32,8 @@ code {
 
 .sidebar-wrapper {
   //padding less
+  border-right: 1px solid rgb(242, 242, 242);
+  box-shadow: 4px 0px 5px 5px black;
   .sidebar {
     // regular style
     .navigation {
